# stand-in

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  new-project.md  opencode.json  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: build.yml  (+4 more)
.stateful-spec/: memory.md  project-definition.md
design-source/: memory.md  project-definition.md
impl/: memory.md  project-definition.md  resume-session.md
stand-in/: CHANGELOG.md  Cargo.toml  README.md
stand-in-client/: CHANGELOG.md  Cargo.toml  README.md
stand-in-client-macros/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
stand-in-client-macros/src/: lib.rs  mcp_client.rs
stand-in-client/examples/: http_client.rs  stdio_client.rs  typed_client.rs
stand-in-client/src/: auth.rs  client.rs  connection.rs  correlation.rs  error.rs  lib.rs  notification.rs  prelude.rs
stand-in-client/src/oauth/: config.rs  flow.rs  loopback.rs  mod.rs  pkce.rs  tokens.rs
stand-in-client/src/transport/: http.rs  mod.rs  sse.rs  stdio.rs
stand-in-client/tests/: api_surface.rs  http_auth.rs  http_client.rs  macro_client.rs  oauth.rs  stdio_client.rs
stand-in-macros/: CHANGELOG.md  Cargo.toml  README.md
stand-in-macros/src/: lib.rs  mcp_prompt.rs  mcp_resource.rs  mcp_server.rs  mcp_tool.rs  schema.rs
stand-in-mcp-explorer/: Cargo.toml
stand-in-mcp-explorer/stand-in-mcp-explorer/: CHANGELOG.md  Cargo.toml  README.md
stand-in-mcp-explorer/stand-in-mcp-explorer-ds/: CHANGELOG.md  Cargo.toml  README.md
stand-in-mcp-explorer/stand-in-mcp-explorer-ds/docs/: core.md  data.md  forms.md  navigation.md  theme.md
stand-in-mcp-explorer/stand-in-mcp-explorer-ds/src/: assets.rs  lib.rs  prelude.rs
stand-in-mcp-explorer/stand-in-mcp-explorer-ds/src/core/: badge.rs  button.rs  copy_button.rs  count_pill.rs  icon.rs  icon_button.rs  mod.rs  spinner.rs  status_dot.rs  toggle_link.rs
stand-in-mcp-explorer/stand-in-mcp-explorer-ds/src/data/: empty_state.rs  hint_bar.rs  json_tokens.rs  json_view.rs  list_item.rs  list_search.rs  log_row.rs  mod.rs  panel.rs  preset_card.rs
stand-in-mcp-explorer/stand-in-mcp-explorer-ds/src/forms/: field.rs  key_value_row.rs  mod.rs  segmented_control.rs  select.rs
stand-in-mcp-explorer/stand-in-mcp-explorer-ds/src/navigation/: brand_header.rs  cap_chip.rs  mod.rs  section_label.rs  sidebar_shell.rs  tabbar.rs  topbar.rs
stand-in-mcp-explorer/stand-in-mcp-explorer-ds/src/theme/: colors.rs  density.rs  mod.rs  palette.rs  typography.rs
stand-in-mcp-explorer/stand-in-mcp-explorer-ds/tests/: geometry.rs
stand-in-mcp-explorer/stand-in-mcp-explorer-gallery/: Cargo.toml
stand-in-mcp-explorer/stand-in-mcp-explorer-gallery/src/: args.rs  main.rs  shell.rs
stand-in-mcp-explorer/stand-in-mcp-explorer-gallery/src/sections/: actions.rs  badges.rs  data.rs  data_extra.rs  forms.rs  forms_advanced.rs  foundations.rs  icon.rs  indicators.rs  mod.rs  navigation.rs  select.rs  util.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/docs/: audit-8-prohibitions.md  perf-measurement.md
stand-in-mcp-explorer/stand-in-mcp-explorer/src/: args.rs  lib.rs  main.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/app/: active_tab.rs  conn_state.rs  engine_loop.rs  events.rs  history.rs  log.rs  mod.rs  perf.rs  secrets.rs  servers.rs  settings.rs  studio_app.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/app/i18n/: en.rs  es.rs  mod.rs  pt_br.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/bars/: mod.rs  tabbar.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/bars/sidebar/: auth_state.rs  auth_trigger.rs  brand_header.rs  connect_block.rs  connection_form.rs  env_rows.rs  env_trigger.rs  mod.rs  privacy_badge.rs  saved_servers.rs  sidebar_state.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/bars/topbar/: caps.rs  mod.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/screens/: auth_panel.rs  env_panel.rs  error_state.rs  mod.rs  onboarding.rs  settings.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/tabs/: mod.rs  work_area.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/tabs/history/: mod.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/tabs/notifications/: mod.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/tabs/prompts/: args.rs  mod.rs  prompt_detail.rs  prompt_list.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/tabs/resources/: content.rs  mod.rs  resource_detail.rs  resource_list.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/src/tabs/tools/: mod.rs  params_form.rs  schema.rs  tool_detail.rs  tool_list.rs
stand-in-mcp-explorer/stand-in-mcp-explorer/tests/: app_interaction.rs  bridge.rs  oauth_wiring.rs
stand-in-reference/: Cargo.toml
stand-in-reference/src/: main.rs
stand-in/examples/: all_features.rs  hello_server.rs  http_server.rs  resource_server.rs
stand-in/src/: error.rs  lib.rs
stand-in/src/prompt/: get_prompt_params.rs  get_prompt_result.rs  list_prompts_result.rs  mod.rs  prompt_argument.rs  prompt_definition.rs  prompt_factory.rs  prompt_message.rs  prompt_registry.rs  prompt_trait.rs  prompt_type.rs
stand-in/src/protocol/: error.rs  mod.rs  notification.rs  request.rs  response.rs
stand-in/src/resource/: list_resource_templates_result.rs  list_resources_result.rs  mod.rs  read_resource_params.rs  read_resource_result.rs  resource_annotations.rs  resource_contents.rs  resource_definition.rs  resource_factory.rs  resource_registry.rs  resource_template.rs  resource_trait.rs  subscribe_params.rs  unsubscribe_params.rs
stand-in/src/server/: client_info.rs  handler.rs  initialize_params.rs  initialize_result.rs  mod.rs  prompts_capability.rs  resources_capability.rs  server_capabilities.rs  server_info.rs  tools_capability.rs
stand-in/src/tool/: call_tool_params.rs  call_tool_result.rs  content.rs  input_schema.rs  list_tools_result.rs  mod.rs  tool_definition.rs  tool_factory.rs  tool_registry.rs  tool_trait.rs
stand-in/src/transport/: http_transport.rs  mod.rs  session.rs  session_store.rs  sse.rs  stdio.rs  transport_trait.rs
stand-in/tests/: http_server.rs  stdio_server.rs
(+55 files in other folders)
