[workspace]
members = ["stand-in", "stand-in-macros", "stand-in-reference"]
resolver = "2"

[workspace.package]
version = "0.0.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/franciscotbjr/stand-in"
keywords = ["mcp", "ai", "llm", "agent", "server"]
categories = ["web-programming::websocket", "web-programming::http-server", "artificial-intelligence"]
exclude = [
    ".claude/", 
    ".github/", 
    ".stateful-spec/", 
    ".vscode/", 
    "impl/", 
    "AGENTS.md",
    "ARCHITECTURE.md"
    ]

[workspace.dependencies]
# Runtime
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal", "io-util", "io-std", "sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22"

# Error handling
thiserror = "2.0.18"

# Async
async-trait = "0.1.89"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# HTTP transport (feature-gated)
axum = "0.8.9"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.23.1", features = ["v4"] }

# Proc macro tooling
syn = { version = "2.0.117", features = ["full", "parsing", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

# Tool discovery
inventory = "0.3.24"

# Testing
reqwest = { version = "0.13.2", features = ["json"] }

# Internal
stand-in-macros = { path = "stand-in-macros", version = "0.0.4" }
