[package]
name = "stand-in-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Procedural macros for stand-in MCP server framework."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
