[package]
name = "stand-in-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Procedural macros for stand-in MCP server framework."
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
