[package]
name = "stand-in-reference"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

description = "Reference MCP server for testing and demonstrating stand-in."

[dependencies]
stand-in = { path = "../stand-in" }
tokio.workspace = true
serde_json.workspace = true
async-trait.workspace = true
inventory.workspace = true

[features]
default = []
http = ["stand-in/http"]
